[package]
name = "disable_ahbprot"
version = "1.1.0"
edition = "2021"

description = "Disables AHBPROT in Wii U IOSU firmware images"
authors = ["Caleb Evans <caleb@calebevans.uk>"]
license-file = "LICENCE"
repository = "https://github.com/caleb39411/disable_ahbprot"
readme = "README.md"

[dependencies]
clap = { version = "4.5", features = ["derive"] }

[[bin]]
name = "disable_ahbprot"
path = "disable_ahbprot.rs"
